ingress-2-paths.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: win-2-svc
spec:
 rules:
 - host: site.com
 http:
 paths:
 - path: /web1
 backend:
 serviceName: win-webserver
 servicePort: 80
 - path: /web2
 backend:
 serviceName: win-webserver2
 servicePort: 80
